src/features/LevelFooter/LevelFooter.module.css
.levelFooter {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-xl);

  .selectedInfo {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;

    .selectedValue {
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .dots {
      display: flex;
      gap: var(--spacing-xs);

      .dot {
        width: 0.5rem;
        height: 0.5rem;
        border-radius: 50%;
        background-color: var(--primary-color);
      }
    }
  }

  .paths {
    display: flex;
    align-items: center;
    gap: var(--spacing-xs);

    .path {
      width: var(--ui-size);
      height: var(--ui-size);
      border: 0.125rem solid var(--border-color);
      display: flex;
      align-items: center;
      justify-content: center;
      transition: transform var(--anim-easing) var(--anim-duration);
      position: relative;
      transform: translateY(var(--spacing-xs));

      .pathResult {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
      }

      .pathCheck {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%) scale(200%);
        opacity: 0;
        transition: transform var(--anim-easing) var(--anim-duration);
      }

      &.completed {
        background-color: var(--primary-color);
        border-color: var(--primary-border-color);

        .pathResult {
          opacity: 0;
        }

        .pathCheck {
          opacity: 1;
          transform: translate(-50%, -50%) scale(100%);
        }
      }

      &.active {
        border-color: var(--primary-border-color);
        transform: translateY(0);
      }
    }
  }
}

